--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/parkjunoo/holder-collecter#readme",
   "dependencies": {
+    "axios": "^1.1.3",
+    "cheerio": "^1.0.0-rc.12",
     "crawler": "^1.3.0",
     "express": "^4.18.2"
   }
