--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "crawler": "^1.3.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "node-schedule": "^2.1.0"
   }
 }
